force-app/main/default/objects/Application_Tags__c/Application_Tags__c.object-meta.xml
<CustomObject>
    <label>Application Tag</label>
    <nameField>
        <label>Application Tags Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>