force-app/main/default/objects/Application_Tags__c/fields/Application_Tag__c.field-meta.xml
<CustomField>
    <fullName>Application_Tag__c</fullName>
    <label>Application Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account in Dispute</fullName>
            </value>
            <value>
                <fullName>Cannabis Review</fullName>
            </value>
            <value>
                <fullName>Confirmed Fraud</fullName>
            </value>
            <value>
                <fullName>DCP Card Verifications Failed</fullName>
            </value>
            <value>
                <fullName>E-Sign Redecision</fullName>
            </value>
            <value>
                <fullName>Family Fraud</fullName>
            </value>
            <value>
                <fullName>First Party Fraud</fullName>
            </value>
            <value>
                <fullName>Follow-Up</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Fraud Awaiting Action</fullName>
            </value>
            <value>
                <fullName>Fraud F/U</fullName>
            </value>
            <value>
                <fullName>Fraud Hold</fullName>
            </value>
            <value>
                <fullName>Fraud Reviewed Declined</fullName>
            </value>
            <value>
                <fullName>Fraud RFP</fullName>
            </value>
            <value>
                <fullName>Fraud Ring</fullName>
            </value>
            <value>
                <fullName>Fraud To-Do</fullName>
            </value>
            <value>
                <fullName>Hot List</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Identity Theft</fullName>
            </value>
            <value>
                <fullName>Issues</fullName>
            </value>
            <value>
                <fullName>Manual Fraud Review</fullName>
            </value>
            <value>
                <fullName>Max OB</fullName>
            </value>
            <value>
                <fullName>Needs Approval</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>New Documents</fullName>
            </value>
            <value>
                <fullName>New Interaction</fullName>
            </value>
            <value>
                <fullName>Non-Resident</fullName>
            </value>
            <value>
                <fullName>Not Moving Forward</fullName>
            </value>
            <value>
                <fullName>Pending 9012</fullName>
            </value>
            <value>
                <fullName>Pending 9013</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>