force-app/main/default/objects/Application_Tags__c/fields/softDelete__c.field-meta.xml
<CustomField>
    <fullName>softDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox to determine when tag is no longer active (&quot;deleted&quot;)</description>
    <inlineHelpText>Check when tag is &quot;deleted&quot;.</inlineHelpText>
    <label>softDelete</label>
    <type>Checkbox</type>
</CustomField>