force-app/main/default/objects/Application_Tags__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Application__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Application_Tag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>